infrastructure/argocd/traefik-dashboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.traineeship-2022.axxes.cloud
      http:
        paths:
          - backend:
              service:
                name: traefik-dashboard
                port:
                  number: 80
            path: /
            pathType: Prefix
